--- a/src/main/resources/templates/registerPage.html
+++ b/src/main/resources/templates/registerPage.html
@@ -19,7 +19,7 @@
 <body>
 <div class="container">
     <h2>회원가입</h2>
-    <form method="post" action="register-action">
+    <form method="post" action="/register-action">
         <table class="login_table">
             <tr>
                 <td>아이디</td>
@@ -34,8 +34,7 @@
                 <td><input type="text" name="userName" placeholder="이름"></td>
             </tr>
         </table>
-        <button type="submit">로그인</button>
-        <button type="button" onclick="location.href='register-page'">회원가입</button>
+        <button type="submit">가입하기</button>
     </form>
 </div>
 </body>
