--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -12,7 +12,7 @@
 <body>
 <div class="container">
     <h2>게시판 목록</h2>
-    <h3 th:text="${message}"></h3>
+    <h3 th:text="${message}"></h3> <span><a class="btn" href="/logout" methods="post">로그아웃</a></span>
     <table class="board_list">
         <colgroup>
             <col width="15%"/>
