--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -23,11 +23,11 @@
         <table class="login_table">
             <tr>
                 <td>아이디</td>
-                <td><input type="text" name="username" placeholder="아이디"></td>
+                <td><input type="text" name="userId" placeholder="아이디"></td>
             </tr>
             <tr>
                 <td>비밀번호</td>
-                <td><input type="password" name="password" placeholder="비밀번호"></td>
+                <td><input type="password" name="userPassword" placeholder="비밀번호"></td>
             </tr>
         </table>
         <button type="submit">로그인</button>
